Update deployment strats. Change response of list strats endpoint. regen spec
