# libs/shared/src/presentation/http/v1/responses/deployment/strategy/mod.rs
@@ -1,14 +1,16 @@
 pub mod entity_to_response;
 
-use super::rule_set::RuleSet;
-use super::parameter_set::ParameterSet;
+// use super::rule_set::RuleSet;
+use super::parameter_set::Parameter;
+use platforms::Platform;
 use utoipa::ToSchema;
 use serde::Serialize;
 
 #[derive(Clone, Debug, ToSchema, Serialize)]
 pub struct Strategy {
     pub name: String,
+    pub platform: Platform,
     pub description: Option<String>,
-    pub rule_sets: Vec<RuleSet>,
-    pub parameter_set: Option<ParameterSet>,
+    // pub rule_sets: Vec<RuleSet>,
+    pub parameters: Vec<Parameter>,
 }
