# services/deployments/spec/v1/openapi.json
@@ -323,7 +323,7 @@
         "operationId": "list_strategies",
         "responses": {
           "200": {
-            "description": "Listed platforms",
+            "description": "A list of all deployment strategies",
             "content": {
               "application/json": {
                 "schema": {
@@ -333,7 +333,7 @@
             }
           },
           "400": {
-            "description": "Not found",
+            "description": "Bad Request",
             "content": {
               "application/json": {
                 "schema": {
@@ -343,7 +343,7 @@
             }
           },
           "404": {
-            "description": "Not found",
+            "description": "Not Found",
             "content": {
               "application/json": {
                 "schema": {
@@ -353,7 +353,7 @@
             }
           },
           "500": {
-            "description": "Not found",
+            "description": "Internal Server Error",
             "content": {
               "application/json": {
                 "schema": {
@@ -393,48 +393,6 @@
           },
           "version": {
             "type": "string"
-          }
-        }
-      },
-      "ClientStrategySet": {
-        "type": "object",
-        "required": [
-          "platform",
-          "strategies"
-        ],
-        "properties": {
-          "description": {
-            "type": [
-              "string",
-              "null"
-            ]
-          },
-          "parameter_sets": {
-            "type": [
-              "array",
-              "null"
-            ],
-            "items": {
-              "$ref": "#/components/schemas/ParameterSet"
-            }
-          },
-          "platform": {
-            "$ref": "#/components/schemas/Platform"
-          },
-          "rule_sets": {
-            "type": [
-              "array",
-              "null"
-            ],
-            "items": {
-              "$ref": "#/components/schemas/RuleSet"
-            }
-          },
-          "strategies": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Strategy"
-            }
           }
         }
       },
@@ -506,7 +464,7 @@
           "result": {
             "type": "array",
             "items": {
-              "$ref": "#/components/schemas/ClientStrategySet"
+              "$ref": "#/components/schemas/Strategy"
             }
           },
           "status": {
@@ -706,23 +664,6 @@
           }
         }
       },
-      "Operator": {
-        "type": "string",
-        "enum": [
-          "Eq",
-          "Neq",
-          "Gte",
-          "Lte",
-          "Gt",
-          "Lt",
-          "In",
-          "Contains",
-          "NotIn",
-          "NoneIn",
-          "AnyIn",
-          "AllIn"
-        ]
-      },
       "ParallelismStrategy": {
         "type": "string",
         "enum": [
@@ -773,24 +714,6 @@
           },
           "type": {
             "$ref": "#/components/schemas/ParameterType"
-          }
-        }
-      },
-      "ParameterSet": {
-        "type": "object",
-        "required": [
-          "name",
-          "parameters"
-        ],
-        "properties": {
-          "name": {
-            "type": "string"
-          },
-          "parameters": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Parameter"
-            }
           }
         }
       },
@@ -885,44 +808,6 @@
           "spec": {}
         }
       },
-      "Rule": {
-        "type": "object",
-        "required": [
-          "field_path",
-          "operator",
-          "value"
-        ],
-        "properties": {
-          "field_path": {
-            "type": "array",
-            "items": {
-              "type": "string"
-            }
-          },
-          "operator": {
-            "$ref": "#/components/schemas/Operator"
-          },
-          "value": {}
-        }
-      },
-      "RuleSet": {
-        "type": "object",
-        "required": [
-          "name",
-          "rules"
-        ],
-        "properties": {
-          "name": {
-            "type": "string"
-          },
-          "rules": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Rule"
-            }
-          }
-        }
-      },
       "ServerErrorResponse": {
         "type": "object",
         "required": [
@@ -966,7 +851,8 @@
         "type": "object",
         "required": [
           "name",
-          "rule_sets"
+          "platform",
+          "parameters"
         ],
         "properties": {
           "description": {
@@ -978,21 +864,14 @@
           "name": {
             "type": "string"
           },
-          "parameter_set": {
-            "oneOf": [
-              {
-                "type": "null"
-              },
-              {
-                "$ref": "#/components/schemas/ParameterSet"
-              }
-            ]
-          },
-          "rule_sets": {
+          "parameters": {
             "type": "array",
             "items": {
-              "$ref": "#/components/schemas/RuleSet"
+              "$ref": "#/components/schemas/Parameter"
             }
+          },
+          "platform": {
+            "$ref": "#/components/schemas/Platform"
           }
         }
       },
