# services/deployments/src/presentation/http/v1/actix_web/handlers/list_strategies.rs
@@ -1,5 +1,6 @@
 use crate::presentation::http::v1::actix_web::helpers::{build_error_response, build_success_response};
-use crate::presentation::http::v1::responses::ClientStrategySet;
+use shared::domain::entities::deployment_strategy::strategy::Strategy;
+use crate::presentation::http::v1::responses;
 use crate::bootstrap::state::AppState;
 use crate::presentation::http::v1::contracts;
 use actix_web::{
@@ -15,22 +16,27 @@ use serde_json::{Value, to_value};
     tag="Strategies",
     description="Lists all available deployment strategies for all platforms",
     responses(
-        (status=200, description="Listed platforms", body=contracts::responses::ListDeploymentStrategiesResponse),
-        (status=400, description="Not found", body=contracts::responses::BadRequestResponse),
-        (status=404, description="Not found", body=contracts::responses::NotFoundResponse),
-        (status=500, description="Not found", body=contracts::responses::ServerErrorResponse),
+        (status=200, description="A list of all deployment strategies", body=contracts::responses::ListDeploymentStrategiesResponse),
+        (status=400, description="Bad Request", body=contracts::responses::BadRequestResponse),
+        (status=404, description="Not Found", body=contracts::responses::NotFoundResponse),
+        (status=500, description="Internal Server Error", body=contracts::responses::ServerErrorResponse),
     )
 )]
 #[get("deployments-api/strategies")]
 async fn list_strategies(data: web::Data<AppState>,) -> impl Responder {
-    let mut strats: Vec<Value> = vec![];
-
+    let mut strats: Vec<Strategy> = vec![];
     for set in data.client_strategy_sets.iter() {
-        match to_value(ClientStrategySet::from(set.clone())) {
-            Ok(v) => { strats.push(v); },
-            Err(err) => return build_error_response(500, format!("Error serializing client strategies: {}", err.to_string()))
-        };
+        strats.extend(set.strategies().clone())
     }
 
-    build_success_response(Some(Value::Array(strats)), Some("Success".into()), None)
+    let mut resp: Vec<Value> = Vec::with_capacity(strats.len());
+    for strat in strats.into_iter() {
+        match to_value(responses::Strategy::from(strat)) {
+            Ok(v) => { resp.push(v); },
+            Err(err) => return build_error_response(500, format!("Error serializing strategies: {}", err.to_string()))
+        };
+    };
+
+
+    build_success_response(Some(Value::Array(resp)), Some("Success".into()), None)
 }
